# template_mcp_server

./: .env.sample  .mcp.json  .mcp.json.sample  .mcp.json.sample.commented  README.md  main.py  pyproject.toml
.claude/commands/: quick-plan.md
.claude/output-styles/: genui.md
ai_docs/: cc_genui_quick_data_mcp_tech_guide_20250922_114012.html  fastmcp.md
docs/: hand_techniques.py  小六夭掌诀.json
specs/: prd_v0.md  prd_v0_ai_enhanced.md
src/mcp_server/: server.py
src/mcp_server/config/: settings.py
src/mcp_server/models/: schemas.py
src/mcp_server/prompts/: __init__.py  hello_prompt.py
src/mcp_server/tools/: __init__.py  hello_tool.py
tests/: conftest.py
tests/prompts/: test_hello_prompt.py
tests/tools/: test_hello_tool.py
